--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,7 +10,9 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "jsx": "react-jsx",
-
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "strict": true,
     "skipLibCheck": true,
     "noEmit": true
