fix: adapt 4 docker

--- a/server/.env
+++ b/server/.env
@@ -1,18 +1,5 @@
-PORT=4000
+DATABASE_URL="postgresql://neondb_owner:npg_MeO7vDU8xfWi@ep-steep-band-ahh09zhe-pooler.c-3.us-east-1.aws.neon.tech/clinic_db?sslmode=require&channel_binding=require"
 NODE_ENV=development
-JWT_SECRET=secret_key_change_this_in_production
-CORS_ORIGIN=http://localhost:5173
-
-# This was inserted by `prisma init`:
-# Environment variables declared in this file are NOT automatically loaded by Prisma.
-# Please add `import "dotenv/config";` to your `prisma.config.ts` file, or use the Prisma CLI with Bun
-# to load environment variables from .env files: https://pris.ly/prisma-config-env-vars.
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-# The following `prisma+postgres` URL is similar to the URL produced by running a local Prisma Postgres
-# server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the
-# one found in a remote Prisma Postgres URL, does not contain any sensitive information.
-
-DATABASE_URL="postgresql://postgres:mysecretpassword@localhost:5432/clinic_db?schema=public"
+JWT_SECRET=dev-insecure-secret-key
+CORS_ORIGIN=http://localhost:5174
+PORT=4000
