--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "watch": "tsx watch --env-file=.env src/index.ts",
     "dev": "tsx watch --env-file=.env src/index.ts",
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "start": "node dist/index.js",
     "test": "vitest run",
     "test:watch": "vitest"
@@ -37,6 +37,7 @@
     "@types/morgan": "^1.9.10",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
+    "@types/vitest": "^2.0.8",
     "prisma": "^7.2.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
