--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,39 +1,40 @@
 {
-  // Visit https://aka.ms/tsconfig to read more about this file
+  
   "compilerOptions": {
-    // File Layout
+    
     "rootDir": "./src",
     "outDir": "./dist",
 
-    // Environment Settings
-    // See also https://aka.ms/tsconfig/module
+    
+    
     "module": "NodeNext",
     "target": "ES2022",
-    // For nodejs:
+    
      "lib": ["ES2022"],
      "types": ["node"],
      "moduleResolution": "NodeNext",
-    // and npm install -D @types/node
+    
 
-    // Other Outputs
+    
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
 
-    // Stricter Typechecking Options
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
+    
+    "noUncheckedIndexedAccess": false,
+    "exactOptionalPropertyTypes": false,
+    "noImplicitAny": false,
 
-    // Style Options
-    // "noImplicitReturns": true,
-    // "noImplicitOverride": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true,
-    // "noPropertyAccessFromIndexSignature": true,
+    
+    
+    
+    
+    
+    
+    
 
-    // Recommended Options
-    "strict": true,
+    
+    "strict": false,
     "jsx": "react-jsx",
     "verbatimModuleSyntax": true,
     "esModuleInterop": true,
