--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,7 +11,7 @@
     "target": "ES2022",
     
      "lib": ["ES2022"],
-     "types": ["node"],
+     "types": ["node", "vitest/globals"],
      "moduleResolution": "NodeNext",
     
 
@@ -44,5 +44,6 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/__tests__", "src/**/*.test.ts"]
 }
