--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,7 +11,7 @@
     "target": "ES2022",
     
      "lib": ["ES2022"],
-     "types": ["node", "vitest/globals"],
+     "types": ["node"],
      "moduleResolution": "NodeNext",
     
 
