--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,9 @@
   command = "npm install && npm run build"
   publish = "dist"
 
+[build.environment]
+  VITE_API_URL = "https://clinic-server-p1w9.onrender.com/api"
+
 [dev]
   command = "npm run dev"
   port = 3000
