--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 DATABASE_URL="postgresql://neondb_owner:npg_MeO7vDU8xfWi@ep-steep-band-ahh09zhe-pooler.c-3.us-east-1.aws.neon.tech/clinic_db?sslmode=require&channel_binding=require"
 NODE_ENV=development
 JWT_SECRET=dev-insecure-secret-key
-CORS_ORIGIN=http://localhost:5174
+CORS_ORIGIN=http://localhost:5173,http://localhost:5174,https://clinicflowapp.netlify.app,https://*.netlify.app
 PORT=4000
