--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,8 @@
     "dev": "tsx watch --env-file=.env src/index.ts",
     "build": "prisma generate && tsc",
     "start": "node dist/index.js",
+    "seed": "tsx --env-file=.env prisma/seed.ts",
+    "migrate": "prisma migrate deploy",
     "test": "vitest run",
     "test:watch": "vitest"
   },
