--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/index.js",
     "seed": "tsx --env-file=.env prisma/seed.ts",
     "migrate": "prisma migrate deploy",
+    "setup": "node run-migrations.mjs",
     "test": "vitest run",
     "test:watch": "vitest"
   },
