--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,6 @@ services:
       - key: JWT_SECRET
         generateValue: true
       - key: CORS_ORIGIN
-        value: https://clinicflowapp.netlify.app,https://*.netlify.app
+        value: "*"
       - key: PORT
         value: "4000"
