--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,6 @@ services:
       - key: JWT_SECRET
         generateValue: true
       - key: CORS_ORIGIN
-        value: "*"
+        value: "https://clinicflowapp.netlify.app,https://695fb12af76af16ea6be7b41--clinicflowapp.netlify.app,https://*.netlify.app"
       - key: PORT
         value: "4000"
